added: register role save & builders / modified: security config
